// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blank request 1`] = `
<div>
  <div
    className={
      Object {
        "data-css-dgukzt": "",
      }
    }
  >
    
  </div>
  <div>
    <button
      disabled={false}
      onClick={[Function]}
    >
      Next
    </button>
  </div>
</div>
`;

exports[`existing description 1`] = `
<div>
  <div
    className={
      Object {
        "data-css-wb46si": "",
      }
    }
  >
    “
    Please pick up my bulk items. 
    ”
  </div>
  <div
    className={
      Object {
        "data-css-dgukzt": "",
      }
    }
  >
    
  </div>
  <div>
    <button
      disabled={false}
      onClick={[Function]}
    >
      Next
    </button>
  </div>
</div>
`;

exports[`service with metadata 1`] = `
<div>
  <div
    className={
      Object {
        "data-css-dgukzt": "",
      }
    }
  >
    
  </div>
  <label>
    <p>
      Please provide any other relevant information:
       
    </p>
    <textarea
      className={
        Object {
          "data-css-1bm19ha": "",
        }
      }
      name="ST-CMTS"
      onChange={[Function]}
      value=""
    />
  </label>
  <div>
    <button
      disabled={false}
      onClick={[Function]}
    >
      Next
    </button>
  </div>
</div>
`;
